<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shift Planner</string>
    <string name="customize">Customize</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">Undo</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Manage rota</item>
        <item>View calendar</item>
        <item>How to use</item>
        <item>About</item>
    </string-array>
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_clock</item>
        <item>@drawable/ic_calendar</item>
        <item>@drawable/ic_howtouse</item>
        <item>@drawable/ic_about</item>
    </array>
    <!-- Manage shift -->
    <string name="new_rota">New Rota</string>
    <string name="continue_btn">SAVE &amp; CONTINUE</string>
    <string name="save_btn">SAVE</string>
    <string name="delete_btn">DELETE</string>
    <string name="name">Name</string>
    <string name="rota_name_hint">Input rota name</string>
    <string name="how_many_week">How many weeks</string>
    <string name="how_many_week_hint">Input number of weeks</string>
    <string name="repeat_rota_for">Repeat Rota for</string>
    <string name="repeat_rota_for_hint">Input number of times</string>
    <string name="color">Color</string>
    <string name="hours">hours</string>
    <string name="next">NEXT</string>
    <string name="copy_to_next">COPY TO NEXT</string>
    <string name="make_all_week">MAKE ALL WEEKS</string>
    <string name="work_time">Work Time</string>
    <string name="alert_week">Number of week must be greater than 0</string>
    <string name="date_start">Date start</string>

    <array name="color_spinner">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </array>

    <!-- setting screen -->
    <string name="google_sync">Google Sync</string>
    <string name="reminder">Reminder</string>

    <array name="reminder_spinner">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </array>
    <!-- about screen -->
    <string name="copy_right">© Copyright Starmark-Ventures Ltd</string>
    <string name="address">153 High Rd. Broxbourne, Hertfordshire. EN10 7BS, UK\nEmail: contact@starmark-ventures.com\nphone: + (44) 0208 4326 331</string>

    <string-array name="descriptions">
        <item>Create and edit your rotas on this page, you will name and input further details on the next screen</item>
        <item>Input the times for each shift on this page, this will take you through each week should they be different.</item>
        <item>This is where you will be able to view your upcoming shifts as well as view the times on each day. Alternatively you can view this information through Google Calender</item>
    </string-array>

</resources>