<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/add_shift_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_layout"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/week_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="WEEK 1"
            android:textColor="@color/caldroid_cyan"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/caldroid_cyan" />

        <ListView
            android:id="@+id/list_weekday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="11dp"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="17dp"
            android:background="@color/green"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/copy_to_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/next_btn"
            android:background="@color/green"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/copy_to_next"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/make_all_week_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="17dp"
            android:background="@color/green"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/make_all_week"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>